<resources>
    <string name="app_name">PEDIDOS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Ingresar correo</string>
    <string name="prompt_password">Ingresar clave</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">usuario no es valido</string>
    <string name="error_invalid_password">La clave es muy corto</string>
    <string name="error_incorrect_password">Usuario o Clave incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="producto">Producto</string>
    <string name="precio">pVp</string>
    <string name="action_save">Guardar</string>
    <string name="action_update">Actualizar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="sms_save">Guardado correctamente</string>
    <string name="sms_error_save">Error al intentar guardar :</string>
    <string name="sms_error_nombre">El campo producto es un valor requerido </string>
    <string name="sms_error_pvp">>El campo precio es un valor requerido</string>
    <string name="sms_update">Actualizado correctamente</string>
</resources>
