<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ec.edu.uisrael.salazarvictorexamen1.vista.MainActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.81"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/txtusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.81"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="184dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnlogin"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="153dp"
                        android:layout_height="wrap_content"
                        android:onClick="onclicklogin"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnregister"
                        android:layout_width="153dp"
                        android:layout_height="wrap_content"
                        android:text="@string/action_sign_up" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
