<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
       tools:context="ec.edu.uisrael.salazarvictorexamen1.vista.ActivityCreate"
    android:weightSum="1">

    <ScrollView
        android:id="@+id/form_sale"
        android:layout_width="match_parent"
        android:layout_height="489dp"
        android:layout_weight="0.23">

        <LinearLayout
            android:id="@+id/form_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilplaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtproducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/producto"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtprecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|numberDecimal"
                    android:hint="@string/precio"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPlannedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnguardar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_save"
                android:onClick="onclickSave"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btncancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_cancel"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
